welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:5: error: too many arguments for method faireV: ()Unit
faireV(4) 
      ^